# euijae.github.io

./: .gitignore  Gemfile  README.md  _config.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml
_includes/: about.html  footer.html  head.html  intro.html
_layouts/: default.html
assets/css/: custom.css
static/css/: output.css
tailwindcss/: package-lock.json
templates/: index.html
