[tool.poetry]
name = "euijae-github-io"
version = "0.1.0"
description = ""
authors = ["Euijae Kim <kimeuijae4@gmail.com>"]
readme = "README.md"
packages = [{include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
